--- a/templates/my_account.html
+++ b/templates/my_account.html
@@ -10,7 +10,7 @@
         <!-- Sign Out Button with CSRF token -->
         <form action="{{ url_for('logout') }}" method="POST">
             <!-- Include CSRF token -->
-            <input type="hidden" name="csrf_token" value="{{ csrf }}">
+            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
             <button type="submit" class="btn btn-logout">Sign Out</button>
         </form>
     </div>
